<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Soal2.InputDataSoal2Activity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtNomor"
            android:hint="@string/nomor"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtNama"
            android:hint="@string/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtTanggalLahir"
            android:hint="@string/tanggal_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtJenisKelamin"
            android:hint="Jenis Kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtAlamat"
            android:hint="Alamat"
            android:minLines="2"
            android:maxLines="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnKembali"
            android:text="@string/kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>